# spikeinterface-gui

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  TODO.md  TODO.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codespell.yml  publish-to-pypi.yml
docs/source/: conf.py  credits.rst  custom_layout.rst  custom_layout_settings.rst  custom_views.rst  deployments.rst  developers.rst  generate_view_page.py  index.rst  installation.rst  launch.rst  release_notes.rst  usage.rst  views.rst
plugin_example/: README.md  example_usage.py  pyproject.toml
plugin_example/my_custom_view_plugin/: __init__.py  custom1view.py  custom2view.py
spikeinterface_gui/: __init__.py  amplitudescalingsview.py  backend_panel.py  backend_qt.py  base.py  basescatterview.py  binnedspikesview.py  compareunitlistview.py  controller.py  controllercomparison.py  correlogramview.py  crosscorrelogramview.py  curation_tools.py  curationview.py  event_tools.py  eventview.py  isiview.py  launcher.py  layout_presets.py  main.py  mainchannel.py  mainsettingsview.py  maintemplateview.py  mainwindow.py  mergeview.py  metricsview.py  myqt.py  ndscatterview.py  pairlist.py  probeview.py  rateview.py  similarityview.py  spikeamplitudeview.py  spikedepthview.py  spikelist.py  spikelistview.py  spikerateview.py  tools.py  tracemapview.py  traceview.py  (+10 more)
spikeinterface_gui/tests/: debug_views.py  test_compare_qt.py  test_controller.py  test_curation_tools.py  test_mainwindow.py  test_mainwindow_panel.py  test_mainwindow_qt.py  test_panel_embedded.py  testingtools.py
spikeinterface_gui/tests/iframe/: curation.json  iframe_server.py  iframe_test.html  iframe_test_README.md
